crates/basecoat-macros/tests/ui/fail_01_void_with_children.stderr
error: void element `<br>` cannot have children
 --> tests/ui/fail_01_void_with_children.rs:5:21
  |
5 |     let _ = rsx! { <br>"oops"</br> };
  |                     ^^
